Configmap.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-proxy
  template:
    metadata:
      labels:
        app: ingress-proxy
    spec:
      containers:
        - name: ingress-proxy
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-proxy
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-proxy
          configMap:
            name: nginx-config

---
apiVersion: v1
kind: Service
metadata:
  name: ingress-proxy-service
spec:
  selector:
    app: ingress-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
