Deployment-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  - name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: spi9325/web:1
          ports:
            - containerPort: 3000


---

apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIp
